# zero-to-production-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
