[package]
name = "zero-to-production-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-production"

[dependencies]
actix-web = { version = "4.9.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = { version = "0.15.6", default-features = false, features = ["yaml"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
secrecy = {version = "0.10.3", features = ["serde"] }
serde-aux = "4.5.0"
anyhow = "1.0.95"
thiserror = "2.0.11"
reqwest = {version = "0.12.12", features = ["cookies"]}
uuid = {version = "1.12.1", features = ["v4"]}
# avoid unnecessary regrex maintainance, we use this crate to validate email
validator = "0.20.0"
rand = { version = "0.8", features = ["std_rng"] }
unicode-segmentation = "1.7.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
claims = "0.8.0"
fake = "3.1.0"